@@ -122,6 +122,7 @@ public class OutboundTcpConnectionPool
         return newSocket(endPoint());
     }
 
+    @SuppressWarnings("resource") // Closing the socket will close the underlying channel.
     public static Socket newSocket(InetAddress endpoint) throws IOException
     {
         // zero means 'bind on any available port.'
