@@ -1,4 +1,5 @@
 3.4
+ * Cleanup a few resource warnings (CASSANDRA-11085)
  * Allow custom tracing implementations (CASSANDRA-10392)
  * Extract LoaderOptions to be able to be used from outside (CASSANDRA-10637)
  * fix OnDiskIndexTest to properly treat empty ranges (CASSANDRA-11205)
